TestCases/ASTTests/SemanticErrorsTests/createTests/read_file_before.dot
digraph AST {
  "139151735409200" [label="Start"];
  "139151735409200" -> "139151735416976";
  "139151735416976" [label="Code"];
  "139151735416976" -> "139151735414624";
  "139151735414624" [label="Function"];
  "139151735414624" -> "139151735407520";
  "139151735414624" -> "139151735407664";
  "139151735414624" -> "139151735410448";
  "139151735407520" [label="main IDENTIFIER"];
  "139151735407664" [label="Parameters"];
  "139151735410448" [label="Code"];
  "139151735410448" -> "139151735415488";
  "139151735410448" -> "139151735590768";
  "139151735415488" [label="Declaration"];
  "139151735415488" -> "139151735591920";
  "139151735591920" [label="f IDENTIFIER"];
  "139151735590768" [label="Assignment"];
  "139151735590768" -> "139151735589136";
  "139151735590768" -> "139151735590528";
  "139151735589136" [label="Expr"];
  "139151735589136" -> "139151735591200";
  "139151735589136" -> "139151735591008";
  "139151735591200" [label="* T__33"];
  "139151735591008" [label="Expr"];
  "139151735591008" -> "139151735590288";
  "139151735591008" -> "139151735587600";
  "139151735590288" [label="* T__33"];
  "139151735587600" [label="f IDENTIFIER"];
  "139151735590528" [label="5 INT"];
}
